# serverless-python

./: .gitignore  README.md  handler.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: main.yml
